--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -79,11 +79,13 @@ jobs:
           - { os: ubuntu-20.04, target: i686-unknown-linux-musl     , use-cross: true }
           - { os: ubuntu-20.04, target: x86_64-unknown-linux-gnu    , use-cross: true }
           - { os: ubuntu-20.04, target: x86_64-unknown-linux-musl   , use-cross: true }
+          - { os: macos-latest , target: aarch64-apple-darwin         }
           - { os: macos-latest , target: x86_64-apple-darwin         }
           # - { os: windows-2019, target: i686-pc-windows-gnu         }  ## disabled; error: linker `i686-w64-mingw32-gcc` not found
           - { os: windows-2019, target: i686-pc-windows-msvc        }
           - { os: windows-2019, target: x86_64-pc-windows-gnu       }
           - { os: windows-2019, target: x86_64-pc-windows-msvc      }
+
     steps:
     - name: Checkout source code
       uses: actions/checkout@v2
@@ -168,6 +170,7 @@ jobs:
     - name: Set testing options
       id: test-options
       shell: bash
+      if: ${{ matrix.job.target != 'aarch64-apple-darwin' }}
       run: |
         # test only library unit tests and binary for arm-type targets
         unset CARGO_TEST_OPTIONS
@@ -176,6 +179,7 @@ jobs:
 
     - name: Run tests
       uses: actions-rs/cargo@v1
+      if: ${{ matrix.job.target != 'aarch64-apple-darwin' }}
       with:
         use-cross: ${{ matrix.job.use-cross }}
         command: test
