--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -79,7 +79,7 @@ jobs:
           - { os: ubuntu-20.04, target: i686-unknown-linux-musl     , use-cross: true }
           - { os: ubuntu-20.04, target: x86_64-unknown-linux-gnu    , use-cross: true }
           - { os: ubuntu-20.04, target: x86_64-unknown-linux-musl   , use-cross: true }
-          - { os: macos-latest , target: aarch64-apple-darwin         }
+          - { os: macos-latest , target: aarch64-apple-darwin       , use-cross: true }
           - { os: macos-latest , target: x86_64-apple-darwin         }
           # - { os: windows-2019, target: i686-pc-windows-gnu         }  ## disabled; error: linker `i686-w64-mingw32-gcc` not found
           - { os: windows-2019, target: i686-pc-windows-msvc        }
@@ -172,7 +172,7 @@ jobs:
       run: |
         # test only library unit tests and binary for arm-type targets
         unset CARGO_TEST_OPTIONS
-        unset CARGO_TEST_OPTIONS ; case ${{ matrix.job.target }} in arm-* | aarch64-*-linux-*) CARGO_TEST_OPTIONS="--bin ${PROJECT_NAME}" ;; esac;
+        unset CARGO_TEST_OPTIONS ; case ${{ matrix.job.target }} in arm-* | aarch64-*) CARGO_TEST_OPTIONS="--bin ${PROJECT_NAME}" ;; esac;
         echo ::set-output name=CARGO_TEST_OPTIONS::${CARGO_TEST_OPTIONS}
 
     - name: Run tests
