--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -113,6 +113,12 @@ jobs:
         override: true
         profile: minimal # minimal component installation (ie, no documentation)
 
+    - name: Set macOS environment variables
+      if: runner.os == 'macOS'
+      run: |
+        echo "SDKROOT=$(xcrun -sdk macosx11.1 --show-sdk-path)" >> $GITHUB_ENV
+        echo "MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx11.1 --show-sdk-platform-version)" >> $GITHUB_ENV
+
     - name: Show version information (Rust, cargo, GCC)
       shell: bash
       run: |
