--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -71,6 +71,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        toolchain: [stable]
         job:
           - { os: ubuntu-20.04, target: arm-unknown-linux-gnueabihf , use-cross: true }
           - { os: ubuntu-20.04, target: arm-unknown-linux-musleabihf, use-cross: true }
@@ -79,12 +80,15 @@ jobs:
           - { os: ubuntu-20.04, target: i686-unknown-linux-musl     , use-cross: true }
           - { os: ubuntu-20.04, target: x86_64-unknown-linux-gnu    , use-cross: true }
           - { os: ubuntu-20.04, target: x86_64-unknown-linux-musl   , use-cross: true }
-          - { os: macos-latest , target: aarch64-apple-darwin        }
           - { os: macos-latest , target: x86_64-apple-darwin         }
           # - { os: windows-2019, target: i686-pc-windows-gnu         }  ## disabled; error: linker `i686-w64-mingw32-gcc` not found
           - { os: windows-2019, target: i686-pc-windows-msvc        }
           - { os: windows-2019, target: x86_64-pc-windows-gnu       }
           - { os: windows-2019, target: x86_64-pc-windows-msvc      }
+        include:
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            toolchain: nightly
     steps:
     - name: Checkout source code
       uses: actions/checkout@v2
@@ -108,7 +112,7 @@ jobs:
     - name: Install Rust toolchain
       uses: actions-rs/toolchain@v1
       with:
-        toolchain: stable
+        toolchain: ${{ matrix.toolchain }}
         target: ${{ matrix.job.target }}
         override: true
         profile: minimal # minimal component installation (ie, no documentation)
